# miniMTI

./: .gitignore  .gitmodules  LICENSE  README.md  environment.yml  pyproject.toml
benchmarking/UNI_scripts/: UNI_embeddings.py  mean_intensity_extraction.py  mints_extraction.sh  run_uni_embeddings.sh  train_regressor.sh  (+1 more)
data/: RoundsCyclesTable.txt  aced_stitch2_channel_info.py  cell_transformations.py  crc_orion_channel_info.py  create_train_file.py  create_training_files-tokenized.py  create_training_files.py  create_vq_train_files.py  data.py  extract_ftable_from_h5.py  lunaphore_channel_info.py  lunaphore_sample_info.json  lunaphore_sample_info_updated.json  lunaphore_val_samples.txt  process_aced_immune.py  process_cedar_biolib_immune.py  process_lunaphore.py  process_orion_crc.py  run_job.sh  val_samples_aced_immune_batch6.txt  val_samples_crc_orion.txt
eval/: Calculate-VQGAN-Metrics.ipynb  calculate_pll_from_tokens.py  channel_info.py  create_panel_selection_data.py  embedding_eval.py  embedding_eval_mvtm.py  eval_mae.py  evaluation.ipynb  generate_ftable_from_h5.py  generate_ftable_from_h5_tokenized.py  generate_ftables.sh  helper.py  intensity.py  intensity_tokenized.py  load_model.py  model_panel_evaluation.py  params.json  params_mvtm-256-lunaphore.json  params_mvtm.json  params_mvtm_aced.json  plotting.py  run_panel_select_tokenized.sh  run_panel_selection.py  run_panel_selection_tokenized.py
example_scripts/: create_training_data.sh  generate_ftable.sh  run_panel_selection.sh  train_lunaphore.sh
scripts/: create_example_data.py  inference_example.py  upload_to_huggingface.py
training/: data.py  mae.py  mae_decoder_only_train.py  run_mae.py  run_mae_decoder_only.py  run_training.py  train_mae.py
(+19 files in other folders)
